# qtbridge-python

./: CMakeLists.txt  README.md  dependencies.yaml  pyproject.toml
coin/: module_config.yaml
coin/instructions/: build_python.yaml  common_env.yaml
examples/colorpaletteclient/: README.md  abstractresource.py  basiclogin.py  colorpaletteclient.qrc  main.py  paginatedresource.py  rc_colorpaletteclient.py  restservice.py
examples/colorpaletteclient/ColorPalette/: ColorView.qml  Main.qml  ServerSelection.qml  UserMenu.qml
examples/colorpaletteclient/server/: main.py  start_server.sh
examples/colorpaletteclient/server/assets/: colors.json  users.json
examples/counter/: CounterModel.qml  README.md  counter.py  qmldir
examples/minimal_app/: Main.qml  README.md  main.py
examples/quiz_example/: QuizModel.qml  README.md  main.py  qmldir
examples/simple_app/: Main.qml  main.py  qmldir
src/QtBridge/: CMakeLists.txt  __init__.py  __init__.pyi  autoqmlbridge.cpp  autoqmlbridge_p.h  autoqmlbridgemodel.cpp  autoqmlbridgemodel_p.h  bridgespep384.cpp  bridgespep384.h  conversion.cpp  conversion_p.h  errorhandler.cpp  errorhandler.h  helpers.cpp  helpers_p.h  pycapsule.cpp  pycapsule_p.h  qmllistproperty.cpp  qmllistproperty_p.h  qmlregistertype.cpp  qmlregistertype_p.h  qtbridgelogging_p.h  qtbridges_module.cpp
src/QtBridge/qtbridge_py/: __init__.py  autoqmlbridge.py  qtbridge.py
src/QtBridge/updateqmldecorators/: completedecorator.cpp  decoratorhelpers.cpp  decoratorhelpers.h  editdecorator.cpp  insertdecorator.cpp  movedecorator.cpp  removedecorator.cpp  resetdecorator.cpp  updateqmldecorator.cpp  updateqmldecorator_p.h
tests/: conftest.py  test_bridgeinstance.py  test_bridgetype.py  test_defaultproperty.py  test_error_handling.py  test_inherited_attributes.py  test_method_return.py  test_nested_types_list.py  test_py_bridgeinstance.py  test_py_qtbridge.py  test_qaim_decorators.py
